[tool.poetry]
name = "biota-quest"
version = "0.1.0"
description = ""
authors = ["Alex Kraken Hawthorne <19832622+AlexKraken@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
